--- a/website/public/css/desktop-login.css
+++ b/website/public/css/desktop-login.css
@@ -6,7 +6,8 @@
     height: 30px;
   }
   .form-login button {
-    height: 30px;
+    padding: 5px;
+    width: 250px;
   }
   .password-forgotten {
     font-size: 20px;
