--- a/website/public/css/header.css
+++ b/website/public/css/header.css
@@ -16,6 +16,7 @@
   flex-wrap: wrap;
   margin: auto;
   width: 90%;
+  align-items: center;
 }
 
 .search-bar {
@@ -25,19 +26,19 @@
   flex-grow: 1;
   text-align: center;
   width: 50%;
-  max-width: 700px;
+  max-width: 500px;
 }
 .search-bar input {
   width: 80%;
   /* margin-top: 40px; */
-  height: 25px;
+  height: 2.5rem;
   border: none;
   border-radius: 5px 0 0 5px;
   padding: 0 0.5rem;
 }
 
 .search-bar button {
-  /* height: 25px; */
+  height: 2.5rem;
   padding: 5px;
   border: none;
   border-radius: 0 5px 5px 0;
